examples/amazon-ec2/infra/rta.tf
resource "aws_route_table_association" "rtb-7846aa1c-rtbassoc-12842276" {
    route_table_id = "rtb-7846aa1c"
    subnet_id = "subnet-ed556b9a"
}
